--- a/frontend.html
+++ b/frontend.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<!-- <body>
     <div id="products"></div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.22.0/axios.js'></script>
     <script>
@@ -28,6 +28,6 @@
             })
             .catch(error => console.log(error.message));
     </script>
-</body>
+</body> -->
 
 </html>
