--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,4 +26,4 @@
             console.log("data;", data); //!
         })
     </script>
-</body>
+</body> -->
