--- a/public/about.html
+++ b/public/about.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,12 +8,12 @@
     <title>About</title>
 </head>
 
-<body>
+<!-- <body>
     About Page
 
     <div>
-        <a href="/public">Go to --> Home page</a>
+        <a href="/public">Go to -> Home page</a>
     </div>
-</body>
+</body> -->
 
-</html> -->
+</html>
