--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <title>Home page</title>
 </head>
 
-<!-- <body>
+<body>
     My Movies Home Page
 
     <div>
         <a href="/public/about.html">Go to -> About page</a>
     </div>
 
-</body> -->
+</body>
 
 </html>
