--- a/public/about.html
+++ b/public/about.html
@@ -8,12 +8,12 @@
     <title>About</title>
 </head>
 
-<!-- <body>
+<body>
     About Page
 
     <div>
         <a href="/public">Go to -> Home page</a>
     </div>
-</body> -->
+</body>
 
 </html>
