--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,16 @@
 
 <body>
     My Movies Home Page
-
     <div>
         <a href="/public/about.html">Go to -> About page</a>
+    </div>
+
+    <br />
+    <br />
+    
+    My Project Page
+        <div>
+        <a href="https://ruslan379.github.io/pet-project_react-hw8_nodejs/">Go to -> Project</a>
     </div>
 
 </body>
